fixed spacing between latest news words

--- a/styles.css
+++ b/styles.css
@@ -298,6 +298,9 @@ a:hover {
   color: black;
   grid-column: 2/4;
   grid-area: row-text;
+  /* display: flex;
+  flex-direction: column;
+  justify-content: space-between; */
 }
 
 .row-text :nth-child(1) {
@@ -1087,21 +1090,12 @@ a:hover {
     height: 9em;
   }
 
-  .row-text {
-    color: black;
-  }
-
-  .row-text a {
-    display: block;
-  }
-
-
-  .row2-box,
+  /* .row2-box,
   .row-text {
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-  }
+  } */
 
   .row-3 {
     display: grid;
@@ -1393,7 +1387,7 @@ a:hover {
     width: 70%;
     margin-left: auto;
     margin-right: auto;
-    grid-template-rows: 600px 400px 1700px 570px;
+    grid-template-rows: 600px 500px 1700px 570px;
     grid-area: row-section;
     grid-template-areas:
       "row-2"
@@ -1464,6 +1458,14 @@ a:hover {
     display: flex;
     height: 100px;
   }
+
+  .row2-box,
+  .row-text {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+  }
+
 
   .row-3 {
     display: grid;
